# lliurex-easy-sites

./: Makefile  generate_po.sh  generate_po_natfree.sh  pyproject.toml  setup-natfree.py  setup.py
debian/: changelog  control  copyright  gpb.conf  lliurex-easy-sites-adi.install  lliurex-easy-sites-adi.postinst  lliurex-easy-sites-natfree.dirs  lliurex-easy-sites-natfree.postinst  lliurex-easy-sites.dirs  lliurex-easy-sites.install  lliurex-easy-sites.pofiles  lliurex-easy-sites.postinst  lliurex-easy-sites.zero  lliurex-easysites-natfree.dirs  lliurex-easysites-natfree.install  lliurex-easysites-natfree.postinst  lliurex-easysites-zerocenter-files.install  lliurex-easysites.dirs  lliurex-easysites.install  lliurex-easysites.pofiles  lliurex-easysites.postinst  n4d-easysites-natfree.install  n4d-easysites.install  n4d-easysites.postinst  rules
lliurex-easy-sites/: lliurex-easy-sites  lliurex-easy-sites-gui
lliurex-easy-sites-adi.install/easy-sites/: index.html
lliurex-easy-sites-natfree/: lliurex-easy-sites
lliurex-easy-sites-natfree/python3-easysites/: Core.py  MainStack.py  SiteManager.py  SiteStack.py  SitesModel.py  SitesOptionsStack.py
lliurex-easy-sites.zmds/: lliurex-easy-sites.app  lliurex-easy-sites.zmd
lliurex-easy-sites/data-files/: create-easy-site.desktop  createeasysite.desktop  custom.json
lliurex-easy-sites/python3-easysites/: Core.py  EditBox.py  ImageManager.py  MainStack.py  MainWindow.py  Screenshot.py  (+7 more)
lliurex-po/: generate_po.sh
translations/: ca@valencia.po  ca_ES.UTF-8@valencia.po  ca_ES@valencia.po  es.po  lliurex-easy-sites.pot
(+73 files in other folders)
